--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@skysong/mc-cli",
-  "version": "1.0.261",
+  "version": "1.0.265",
   "description": "MagicCube 脚手架",
   "scripts": {},
   "author": "SongQian",
   "license": "MIT",
   "bin": "./mcli.js",
-  "devDependencies": {
+  "dependencies": {
     "babel-loader": "^8.2.2",
     "chalk": "^4.1.2",
     "commander": "^9.4.1",
