--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-loader": "^8.2.2",
     "chalk": "^4.1.2",
     "commander": "^9.4.1",
+    "compression-webpack-plugin": "^10.0.0",
     "concurrently": "^6.3.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.5.1",
